# ELEC0138-Group19-project-2024-2025

./: .gitignore  LICENSE  README.md  pyproject.toml
attacks/DoS_DDoS/: DDos_detection.py  README.md  model.pkl
attacks/credential_stuffing_resilience/: README.md
attacks/dos/: README.md  dos.py
attacks/phishing/: README.md  URL_list.txt  phishing_detection.py  requirements.txt  send_email.py  victim_list.csv
attacks/phishing/backend/: backend.py
attacks/phishing/frontend/: .env  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
attacks/phishing/frontend/src/: main.js
attacks/ssh_brute_force/: README.md
attacks/xss/: .gitignore  Dockerfile  README.md  attack.py  requirements.txt
attacks/xss-csrf/data-receiver/: Dockerfile  app.py
attacks/xss/app/: __init__.py  attack_utils.py  config.py  models.py  routes.py
attacks/xss/app/templates/: index.html
attacks/xss/app/xss_attack_tool/: __init__.py  main.py
attacks/xss/data-receiver/: Dockerfile  requirements.txt
attacks/xss/data-receiver/app/: __init__.py  config.py  models.py  routes.py
backend/: .dockerignore  .env  Dockerfile  README.md  backend.py  config.py  requirements.txt
env/: environment.yml  requirements.txt
frontend/: .env  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/: main.css
frontend/src/components/: ThemeToggle.vue  forum.vue  login.vue
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/stores/: auth.js  forum.js
(+10 files in other folders)
