[project]
name = "elec0138"
version = "0.1.0"
description = "ELEC0138 Group 19"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "flask-mysqldb (>=2.0.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
